<resources>
    <string name="versionName">1.3.4</string>
	<string name="urlGetIngredientDetails">http://50.22.11.28/~samscook/recipeApp/getIngredientDetails.php</string>
    <string name="urlUpdateIngredient">http://50.22.11.28/~samscook/recipeApp/updateIngredient.php</string>
    <string name="urlDeleteIngredient">http://50.22.11.28/~samscook/recipeApp/deleteIngredient.php</string>
    <string name="urlCreateNewIngredient">http://50.22.11.28/~samscook/recipeApp/createIngredient.php</string>
    <string name="urlGetAllComments">http://50.22.11.28/~samscook/recipeApp/getAllComments.php</string>
    <string name="url_create_product">http://50.22.11.28/~samscook/recipeApp/create_product.php</string>
    <string name="urlCreateRecipe">http://50.22.11.28/~samscook/recipeApp/createRecipe.php</string>
    <string name="urlUpdateRecipe">http://50.22.11.28/~samscook/recipeApp/updateRecipe.php</string>
    <string name="urlCreateComment">http://50.22.11.28/~samscook/recipeApp/createComment.php</string>
    <string name="urlGetAllIngredients">http://50.22.11.28/~samscook/recipeApp/getAllIngredients.php</string>
    <string name="urlGetFavRecipes">http://50.22.11.28/~samscook/recipeApp/getFavRecipes.php</string>
    <string name="urlGetRecipeDetails">http://50.22.11.28/~samscook/recipeApp/getRecipeDetails.php</string>
    <string name="urlEditRecipe">http://50.22.11.28/~samscook/recipeApp/editRecipe.php</string>
    <string name="urlCreateAccount">http://50.22.11.28/~samscook/recipeApp/createAccount.php</string>
    <string name="urlLogin">http://50.22.11.28/~samscook/recipeApp/logIn.php</string>
    <string name="urlEditComment">http://50.22.11.28/~samscook/recipeApp/editComment.php</string>
    <string name="urlUpdateComment">http://50.22.11.28/~samscook/recipeApp/updateComment.php</string>
    <string name="urlGetAllRecipesByIngredient">http://50.22.11.28/~samscook/recipeApp/getAllRecipesByIngredient.php</string>
    <string name="urlUploadImage">http://50.22.11.28/~samscook/recipeApp/uploadImage.php</string>
    <string name="urlResetPassword">http://50.22.11.28/~samscook/recipeApp/resetPassword.php</string>
    <string name="urlGetTestQuestion">http://50.22.11.28/~samscook/recipeApp/getTestQuestion.php</string>
    <string name="urlUpdateAccount">http://50.22.11.28/~samscook/recipeApp/updateAccount.php</string>
    <string name="urlGetUserInfo">http://50.22.11.28/~samscook/recipeApp/getUserInfo.php</string>
    <string name="urlGetAllRecipesByAlpha">http://50.22.11.28/~samscook/recipeApp/getAllRecipesByAlpha.php</string>
    <string name="urlGetAllRecipesByReview">http://50.22.11.28/~samscook/recipeApp/getAllRecipesByReview.php</string>
    <string name="urlGetAllRecipesByRating">http://50.22.11.28/~samscook/recipeApp/getAllRecipesByRating.php</string>
    <string name="urlSendFeedback">http://50.22.11.28/~samscook/recipeApp/sendFeedback.php</string>
    <string name="urlRoot">http://50.22.11.28/~samscook/recipeApp/</string>
    <string name="userName">Unknown</string>
    <string name="hello">Hello World, Check this recipe app out!</string>
    <string name="app_name">Sam\'s Cookbook</string>
    <string name="mainSeePantry">See Your Pantry</string>
    <string name="mainSearchForRecipe">Refined Recipe Search</string>
    <string name="mainAddRecipe">Create a Recipe</string>
    <string name="mainFavoriteRecipes">Your Favorite Recipes</string>
    <string name="mainSavedRecipes">Your Saved Recipes</string>
    <string name="createAccount">Create an\naccount</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="loginToCreate">Log in to create recipes</string>
    <string name="loginToEditAcc">Log in to edit account</string>
    <string name="youLoggedOut">You have Logged out!</string>
    <string name="isNowLogedIn">is logged in</string>
    <string name="genRecipeSearch">Key word search</string>
    <string name="pEnterUser">Please enter your username.</string>
    <string name="pEnterPass">Please enter your password.</string>
    <string name="pEnterNameForPass">Please enter your user name\nto find your password.</string>
    <string name="pLoginInFirst">I\'m sorry you must first login.</string>
    <string name="pEnterTestQAns">Please enter your test question answer.</string>
    <string name="pEnterTestQ">Please enter a test question.</string>
    <string name="needNickName">You need a nick name.</string>
    <string name="pEnterValidEmail">Please enter a valid email address.</string>
    <string name="pEnterYourFname">Please enter your first name.</string>
    <string name="pEnterYourLname">Please enter your last name.</string>
    <string name="pEnterAPass">Please enter a password.</string>
    <string name="pEnterYourPassToConfirm">Enter your password to confirm changes.</string>
    <string name="pEnterTestQAnsToConfirm">Enter your test question answer to confirm changes.</string>
    <string name="pEnterRecipeName">Please enter a recipe name.</string>
    <string name="pEnterCookingDir">Please add some cooking directions.</string>
    <string name="pEnterCookTime">Please enter a time for cook time and prep time or 0.</string>
    <string name="pEnterSumery">Please enter a short summery.</string>
    <string name="pEnterIngredient">Please add at least one ingredient.</string>
    <string name="pEnterIngredientName">Please enter an ingredient name.</string>
    <string name="logingIn">Loging in...</string>
    <string name="loadingRecipes">Loading Recipes. Please wait...</string>
    <string name="loadingRecipeDetails">Loading Recipe details. Please wait...</string>
    <string name="loadingIngredients">Loading Ingredients. Please wait...</string>
    <string name="loadingIngredientDetails">Loading Ingredient details. Please wait...</string>
    <string name="loadingComments">Loading Comments. Please wait...</string>
    <string name="resetingPass">Reseting Password...</string>
    <string name="loadingTestQ">Loading Test Question...</string>
    <string name="updatingAcc">Updating Account...</string>
    <string name="loadingUserInfo">Loading User Info...</string>
    <string name="updatingRecipe">Updating Recipe...</string>
    <string name="creatingRecipe">Creating Recipe...</string>
    <string name="savingIngredientChanges">Saving ingredient Changes...</string>
    <string name="deletingIngredient">Deleting ingredient...</string>
    <string name="CreatingIngredient">Creating Ingredient...</string>
    <string name="updatingComment">Updating Comment...</string>
    <string name="loadingComment">Loading Comment...</string>
    <string name="poastingComment">Posting Comment...</string>
    <string name="creatingAcc">Creating Account...</string>
    <string name="sendingFeedback">Sending Feedback...</string>
    <string name="saveToPantry">Save to Pantry</string>
    <string name="searchRecipes">Search Recipes</string>
    <string name="editPantry">Edit Pantry</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="addOne">Create Ingredient</string>
    <string name="editOne">Edit</string>
    <string name="addComment">Add a Comment</string>
    <string name="dropFromList">Drop From List</string>
    <string name="done">Done</string>
    <string name="selectAll">Select All</string>
    <string name="searchForAny">Find recipes that contain all of the selected ingredients.</string>
    <string name="searchForAll">Find recipes for which you have all of the necessary ingredients.</string>
    <string name="chooseSearchType">Choose your search type.</string>
    <string name="selectIngredients">Please select some ingredients.</string>
    <string name="yourPantryEmpty">Your Pantry is empty.\nPick some ingredients from our database.</string>
    <string name="cookingHint">Do this first: ... \nThen do this: ... \nFinaly do this: ...</string>
    <string name="ingredientHint">1oz of sliced green onions \n2 cups of vinegar \n5 teaspoons of arsenic \netc...</string>
    <string name="summeryHint">A few key words to describe this\nrecipe...(70 caracters)</string>
	<string-array name="recipeType"> 
    <item>Any</item> 
    <item>Breakfast</item> 
    <item>Main Dish</item>
    <item>Salad</item>
    <item>Soup</item>
    <item>Side Dish</item>
    <item>Bread</item>
    <item>Dessert</item>
    <item>Pastry</item>
    <item>Cake</item> 
    <item>Appetizer</item> 
	</string-array>
    <string name="publishRecipe">Publish Recipe</string>
    <string name="takeApic">Take a Picture</string>
    <string name="addIngredients">Add/Remove ingredients</string>
    <string name="servings">Servings:</string>
    <string name="ingredientVital">Is this ingredient essential?</string>
    <string name="dicedChoped">diced, chopped, etc...</string>
    <string name="recipeUpdated">Recipe Updated</string>
    <string name="recipeCreated">Recipe Created</string>
    <string name="chooseIngredients">First pick all the ingredients that you will be using</string>
    <string name="postedBy">Posted by:</string>
    <string name="editYourCom">Editing your previous comment.</string>
    <string name="editYourOwnCom">You can only edit your own comment.</string>
    <string name="commentHint">New Comment Here</string>
    <string name="postComment">Post</string>
    <string name="yourRating">Your Rating: </string>
    <string name="commentUpdated">Comment Updated</string>
    <string name="commentPosted">Comment Posted</string>
    <string name="yourTestQuestion">This is your test question:</string>
    <string name="enterAnswer">Please enter the answer</string>
    <string name="resetPassword">Reset Password</string>
    <string name="forgotPassword">Forgot\nPassword</string>
    <string name="resetPasswordMessage">You will receive an email shortly with your new password.\nRemeber to check you spam box if you do not see it.</string>
    <string name="resetPasswordAnswerDoesNotMatch">Your answer does not match the one we have.\nPlease remember that it is case sensitive.</string>
    <string name="hintAnswer">Answer</string>
    <string name="cookingDirections">Cooking Directions:</string>
    <string name="ingredientList">Ingredient List:</string>
    <string name="recipeName">Recipe Name</string>
    <string name="recipeHandle">Open</string>
    <string name="prepTime">Prep Time:</string>
	<string name="search">Search</string>
	<string name="nickName">Nick Name</string>
	<string name="email">Email</string>
	<string name="firstName">First Name</string>
	<string name="lastName">Last Name</string>
	<string name="password">Password</string>
	<string name="testQuestion">for ex: Mothers maiden name</string>
	<string name="testAnswer">Ans: Catalina Madalina</string>
	<string name="prefNickName">Enter a nick name:</string>
	<string name="prefEmail">Enter your email:</string>
	<string name="prefFirstName">Enter your first name:</string>
	<string name="prefLastName">Enter your last name:</string>
	<string name="prefPassword">Enter a password:</string>
	<string name="prefHintNickName">Will be seen by others</string>
	<string name="saveInfo">Create Account</string>
	<string name="prefTestQuestion">Enter a test question:</string>
	<string name="prefTestAnswer">Enter your answer to the question:</string>
	<string name="hintTestAnswer">Enter your test answer please</string>
	<string name="prefEditNickName">Your nick name:</string>
	<string name="prefEditEmail">Your email address:</string>
	<string name="prefEditFirstName">Your first name:</string>
	<string name="prefEditLastName">Your last name:</string>
	<string name="prefOldPassword">Enter your password:</string>
	<string name="prefNewPassword">Enter a new password:</string>
	<string name="hintOldPassword">Password needed to save changes</string>
	<string name="hintNewPassword">Leave blank to not change</string>
</resources>