<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp" >
            
            <TextView
         android:id="@+id/pref1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="false"
         android:layout_gravity="top"
         android:paddingTop="5dp"
         android:text="@string/prefEditNickName" >
	    
	</TextView>
	
    <EditText
        android:id="@+id/editUserNickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pref1"
        android:layout_gravity="top"
        android:hint="@string/prefHintNickName"
        android:inputType="text"
        android:maxLength="20" >
	    
	</EditText>
	
    <TextView
        android:id="@+id/pref2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:paddingTop="10dp"
        android:layout_below="@id/editUserNickName"
        android:text="@string/prefEditEmail" >
	    
	</TextView>
	
	<EditText
	    android:id="@+id/editUserEmail"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/pref2"
	    android:layout_gravity="top"
	    android:hint="@string/email"
	    android:inputType="textWebEmailAddress"
	    android:maxLength="30" >
	    
	</EditText>
	
	<TextView
	    android:id="@+id/pref3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editUserEmail"
        android:paddingTop="10dp"
        android:text="@string/prefEditFirstName" >
	    
	</TextView>
	
	<EditText
	    android:id="@+id/editUserFirstName"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/pref3"
	    android:layout_gravity="top"
	    android:hint="@string/firstName"
	    android:inputType="textCapWords"
	    android:maxLength="20" >
	    
	</EditText>
	
	<TextView
	    android:id="@+id/pref4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@id/editUserFirstName"
        android:text="@string/prefEditLastName" >
	    
	</TextView>
	
	<EditText
	    android:id="@+id/editUserLastName"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/pref4"
	    android:hint="@string/lastName"
	    android:inputType="textCapWords"
	    android:maxLength="20" >
	    
	</EditText>
	
	<TextView
	    android:id="@+id/pref6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@id/editUserLastName"
        android:text="@string/prefOldPassword" >
	    
	</TextView>

	<EditText
	    android:id="@+id/editUserOldPassword" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/hintOldPassword"
	    android:layout_below="@id/pref6"
	    android:inputType="textVisiblePassword"
	    android:maxLength="30" >
	    
	</EditText>
	
	
		<TextView
	    android:id="@+id/pref6bis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@id/editUserOldPassword"
        android:text="@string/prefNewPassword" >
	    
	</TextView>

	<EditText
	    android:id="@+id/editUserNewPassword" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/hintNewPassword"
	    android:layout_below="@id/pref6bis"
	    android:inputType="textVisiblePassword"
	    android:maxLength="30" >
	    
	</EditText>
	
	<TextView
	    android:id="@+id/pref7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@id/editUserNewPassword"
        android:text="@string/prefTestQuestion" >
	    
	</TextView>

	<EditText
	    android:id="@+id/editUserTestQuestion"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/pref7"
	    android:hint="@string/testQuestion"
	    android:inputType="textCapSentences|textAutoCorrect|textAutoComplete"
	    android:maxLength="80" >
	    
	</EditText>
	
		<TextView
	    android:id="@+id/pref8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@id/editUserTestQuestion"
        android:text="@string/prefTestAnswer" >
	    
	</TextView>

	<EditText
	    android:id="@+id/editUserTestQuestionAnswer"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/pref8"
	    android:hint="@string/hintTestAnswer"
	    android:inputType="text" >
	    
	</EditText>
	
    	<Button
    	    android:id="@+id/btnPreferenceUpdate"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_alignParentBottom="false"
    	    android:layout_below="@id/editUserTestQuestionAnswer"
    	    android:text="@string/saveInfo" />

</RelativeLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>