<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp" >
            
            <TextView
         android:id="@+id/pref1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="false"
         android:layout_gravity="top"
         android:paddingTop="5dp"
         android:text="@string/prefNickName" >
	    
	</TextView>
	
    <EditText
        android:id="@+id/userNickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pref1"
        android:layout_gravity="top"
        android:hint="@string/prefHintNickName"
        android:inputType="text"
        android:maxLength="20" >
	    
	</EditText>
	
    <TextView
        android:id="@+id/pref2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:paddingTop="10dp"
        android:layout_below="@id/userNickName"
        android:text="@string/prefEmail" >
	    
	</TextView>
	
	<EditText
	    android:id="@+id/userEmail"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/pref2"
	    android:layout_gravity="top"
	    android:hint="@string/email"
	    android:inputType="textWebEmailAddress"
	    android:maxLength="30" >
	    
	</EditText>
	
	<TextView
	    android:id="@+id/pref3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userEmail"
        android:paddingTop="10dp"
        android:text="@string/prefFirstName" >
	    
	</TextView>
	
	<EditText
	    android:id="@+id/userFirstName"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/pref3"
	    android:layout_gravity="top"
	    android:hint="@string/firstName"
	    android:inputType="textCapWords"
	    android:maxLength="20" >
	    
	</EditText>
	
	<TextView
	    android:id="@+id/pref4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@id/userFirstName"
        android:text="@string/prefLastName" >
	    
	</TextView>
	
	<EditText
	    android:id="@+id/userLastName"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/pref4"
	    android:hint="@string/lastName"
	    android:inputType="textCapWords"
	    android:maxLength="20" >
	    
	</EditText>
	
	<TextView
	    android:id="@+id/pref6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@id/userLastName"
        android:text="@string/prefPassword" >
	    
	</TextView>

	<EditText
	    android:id="@+id/userPassword" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/password"
	    android:layout_below="@id/pref6"
	    android:inputType="textVisiblePassword"
	    android:maxLength="30" >
	    
	</EditText>
	
		<TextView
	    android:id="@+id/pref7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@id/userPassword"
        android:text="@string/prefTestQuestion" >
	    
	</TextView>

	<EditText
	    android:id="@+id/userTestQuestion"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/pref7"
	    android:hint="@string/testQuestion"
	    android:inputType="textCapSentences|textAutoCorrect|textAutoComplete"
	    android:maxLength="80" >
	    
	</EditText>
	
		<TextView
	    android:id="@+id/pref8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@id/userTestQuestion"
        android:text="@string/prefTestAnswer" >
	    
	</TextView>

	<EditText
	    android:id="@+id/userTestQuestionAnswer"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/pref8"
	    android:hint="@string/testAnswer"
	    android:paddingBottom="10dp"
	    android:inputType="text" >
	    
	</EditText>
	
    	<Button
    	    android:id="@+id/btnPreferenceSave"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@id/userTestQuestionAnswer"
    	    android:layout_alignParentBottom="true"
    	    android:text="@string/saveInfo" />

</RelativeLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>