<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">
	
    <!--  Sample Dashboard screen with Two buttons -->

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:paddingRight="10dp"
            android:text="@string/isNowLogedIn"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView1"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/imageView1"
            android:ems="10"
            android:hint="@string/genRecipeSearch" />

        <ImageView
            android:id="@+id/imageView1"
            android:onClick="searchRecipe"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView1"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/icon" />

        <Button
            android:id="@+id/btnMainLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnMainMe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/btnMainLogout"
            android:layout_toRightOf="@+id/btnMainLogin"
            android:text="Who am I?" />

        <Button
            android:id="@+id/btnMainLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btnMainAddRecipe"
            android:text="@string/logout" />

        <Button
            android:id="@+id/btnMainFavRecipe"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnMainSavedRecipe"
            android:layout_alignBottom="@+id/btnMainSavedRecipe"
            android:layout_alignParentLeft="true"
            android:text="@string/mainFavoriteRecipes" />

        <Button
            android:id="@+id/btnMainSavedRecipe"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/autoCompleteTextView1"
            android:layout_marginTop="24dp"
            android:text="@string/mainSavedRecipes" />

        <Button
            android:id="@+id/btnMainAddRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnMainLogin"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="54dp"
            android:text="@string/mainAddRecipe" />

        <Button
            android:id="@+id/btnMainPantry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/mainSeePantry" />

        <Button
            android:id="@+id/btnMainToRecipeSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnMainAddRecipe"
            android:layout_alignParentLeft="true"
            android:text="@string/mainSearchForRecipe" />

</RelativeLayout>