<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >
	
    <EditText
        android:id="@+id/MainNickName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/nickName"
        android:inputType="text" >
	    
	</EditText>
	
    <EditText
        android:id="@+id/MainPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:inputType="text|textPassword" >
	    
	</EditText>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TableRow >

    <Button
        android:id="@+id/btnMainAlertLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/login" />
    
        <Button
            android:id="@+id/btnMainAlertCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/createAccount" />

    </TableRow>
    </TableLayout>

</LinearLayout>