<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp" >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <RadioButton
            android:id="@+id/radioFindAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/searchForAll" />
    
    
        <RadioButton
            android:id="@+id/radioFindAny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchForAny" />
    </RadioGroup>
    
    <Button
        android:id="@+id/dialogPantrySearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search" />

</LinearLayout>